target/.antlr/htmlParser.java
// Generated from g:/Work/grammarinator_ucla_cs230/target/html.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class htmlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, OPEN=19, CLOSE=20, OPEN_SLASH=21, SLASH_CLOSE=22, EQUALS=23, 
		SCRIPT=24, GLOBAL_STYLE=25, RANDOM_TEXT=26, PX=27, DIM=28, FLEX_CLASS=29, 
		META=30, INLINE_STYLE=31, WIDTH_STYLE=32, HEIGHT_STYLE=33, COLOR=34, COLOR_STYLE=35, 
		POSITION=36, POS_DISTANCE_TYPE=37, POS_DISTANCE=38, POSITION_STYLE=39, 
		BORDER_TYPE=40, BORDER_RADIUS=41, BORDDER_STYLE=42;
	public static final int
		RULE_html = 0, RULE_main = 1, RULE_htmlHead = 2, RULE_htmlBody = 3, RULE_mainWrapper = 4, 
		RULE_recursiveContent = 5, RULE_divWrapper = 6, RULE_sectionWrapper = 7, 
		RULE_headerWrapper = 8, RULE_footerWrapper = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"html", "main", "htmlHead", "htmlBody", "mainWrapper", "recursiveContent", 
			"divWrapper", "sectionWrapper", "headerWrapper", "footerWrapper"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'<!DOCTYPE html> <html lang=\"en\">'", "'</html>'", "'<head>'", 
			"'<title>'", "'</title>'", "'</head>'", "'<body>'", "'</body>'", "'<main>'", 
			"'</main>'", "'<div '", "'</div>'", "'<section '", "'</section>'", "'<header '", 
			"'</header>'", "'<footer '", "'</footer>'", "'<'", "'>'", "'</'", "'/>'", 
			"'='", null, "'<style>body {margin: 0; font-family: Arial, sans-serif;background-color: #f4f4f4;}</style>'", 
			null, null, null, "'class=\"flex-container\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "OPEN", "CLOSE", "OPEN_SLASH", 
			"SLASH_CLOSE", "EQUALS", "SCRIPT", "GLOBAL_STYLE", "RANDOM_TEXT", "PX", 
			"DIM", "FLEX_CLASS", "META", "INLINE_STYLE", "WIDTH_STYLE", "HEIGHT_STYLE", 
			"COLOR", "COLOR_STYLE", "POSITION", "POS_DISTANCE_TYPE", "POS_DISTANCE", 
			"POSITION_STYLE", "BORDER_TYPE", "BORDER_RADIUS", "BORDDER_STYLE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "html.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public htmlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(htmlParser.EOF, 0); }
		public HtmlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_html; }
	}

	public final HtmlContext html() throws RecognitionException {
		HtmlContext _localctx = new HtmlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_html);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			match(T__0);
			setState(21);
			main();
			setState(22);
			match(T__1);
			setState(23);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public HtmlBodyContext htmlBody() {
			return getRuleContext(HtmlBodyContext.class,0);
		}
		public HtmlHeadContext htmlHead() {
			return getRuleContext(HtmlHeadContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(25);
				htmlHead();
				}
			}

			setState(28);
			htmlBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlHeadContext extends ParserRuleContext {
		public TerminalNode RANDOM_TEXT() { return getToken(htmlParser.RANDOM_TEXT, 0); }
		public TerminalNode GLOBAL_STYLE() { return getToken(htmlParser.GLOBAL_STYLE, 0); }
		public List<TerminalNode> META() { return getTokens(htmlParser.META); }
		public TerminalNode META(int i) {
			return getToken(htmlParser.META, i);
		}
		public HtmlHeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlHead; }
	}

	public final HtmlHeadContext htmlHead() throws RecognitionException {
		HtmlHeadContext _localctx = new HtmlHeadContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_htmlHead);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(T__2);
			setState(32);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GLOBAL_STYLE) {
				{
				setState(31);
				match(GLOBAL_STYLE);
				}
			}

			setState(35);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(34);
				match(META);
				}
				break;
			}
			setState(38);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(37);
				match(META);
				}
				break;
			}
			setState(41);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(40);
				match(META);
				}
				break;
			}
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==META) {
				{
				setState(43);
				match(META);
				}
			}

			setState(46);
			match(T__3);
			setState(47);
			match(RANDOM_TEXT);
			setState(48);
			match(T__4);
			setState(49);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlBodyContext extends ParserRuleContext {
		public MainWrapperContext mainWrapper() {
			return getRuleContext(MainWrapperContext.class,0);
		}
		public TerminalNode SCRIPT() { return getToken(htmlParser.SCRIPT, 0); }
		public HtmlBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlBody; }
	}

	public final HtmlBodyContext htmlBody() throws RecognitionException {
		HtmlBodyContext _localctx = new HtmlBodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_htmlBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(T__6);
			setState(52);
			mainWrapper();
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SCRIPT) {
				{
				setState(53);
				match(SCRIPT);
				}
			}

			setState(56);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainWrapperContext extends ParserRuleContext {
		public List<RecursiveContentContext> recursiveContent() {
			return getRuleContexts(RecursiveContentContext.class);
		}
		public RecursiveContentContext recursiveContent(int i) {
			return getRuleContext(RecursiveContentContext.class,i);
		}
		public TerminalNode SCRIPT() { return getToken(htmlParser.SCRIPT, 0); }
		public MainWrapperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainWrapper; }
	}

	public final MainWrapperContext mainWrapper() throws RecognitionException {
		MainWrapperContext _localctx = new MainWrapperContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mainWrapper);
		int _la;
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				match(T__8);
				setState(59);
				recursiveContent();
				setState(60);
				recursiveContent();
				setState(61);
				recursiveContent();
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 67282944L) != 0)) {
					{
					{
					setState(62);
					recursiveContent();
					}
					}
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SCRIPT) {
					{
					setState(68);
					match(SCRIPT);
					}
				}

				setState(71);
				match(T__9);
				}
				break;
			case T__10:
			case T__12:
			case T__14:
			case T__16:
			case RANDOM_TEXT:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				recursiveContent();
				setState(74);
				recursiveContent();
				setState(75);
				recursiveContent();
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 67282944L) != 0)) {
					{
					{
					setState(76);
					recursiveContent();
					}
					}
					setState(81);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(83);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(82);
					match(SCRIPT);
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RecursiveContentContext extends ParserRuleContext {
		public TerminalNode RANDOM_TEXT() { return getToken(htmlParser.RANDOM_TEXT, 0); }
		public DivWrapperContext divWrapper() {
			return getRuleContext(DivWrapperContext.class,0);
		}
		public SectionWrapperContext sectionWrapper() {
			return getRuleContext(SectionWrapperContext.class,0);
		}
		public HeaderWrapperContext headerWrapper() {
			return getRuleContext(HeaderWrapperContext.class,0);
		}
		public FooterWrapperContext footerWrapper() {
			return getRuleContext(FooterWrapperContext.class,0);
		}
		public RecursiveContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recursiveContent; }
	}

	public final RecursiveContentContext recursiveContent() throws RecognitionException {
		RecursiveContentContext _localctx = new RecursiveContentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_recursiveContent);
		try {
			setState(100);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(RANDOM_TEXT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				divWrapper();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				sectionWrapper();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				headerWrapper();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(91);
				footerWrapper();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(92);
				divWrapper();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(93);
				sectionWrapper();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(94);
				headerWrapper();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(95);
				footerWrapper();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(96);
				divWrapper();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(97);
				sectionWrapper();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(98);
				headerWrapper();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(99);
				footerWrapper();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DivWrapperContext extends ParserRuleContext {
		public TerminalNode CLOSE() { return getToken(htmlParser.CLOSE, 0); }
		public List<RecursiveContentContext> recursiveContent() {
			return getRuleContexts(RecursiveContentContext.class);
		}
		public RecursiveContentContext recursiveContent(int i) {
			return getRuleContext(RecursiveContentContext.class,i);
		}
		public TerminalNode INLINE_STYLE() { return getToken(htmlParser.INLINE_STYLE, 0); }
		public TerminalNode FLEX_CLASS() { return getToken(htmlParser.FLEX_CLASS, 0); }
		public TerminalNode SCRIPT() { return getToken(htmlParser.SCRIPT, 0); }
		public DivWrapperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_divWrapper; }
	}

	public final DivWrapperContext divWrapper() throws RecognitionException {
		DivWrapperContext _localctx = new DivWrapperContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_divWrapper);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__10);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INLINE_STYLE) {
				{
				setState(103);
				match(INLINE_STYLE);
				}
			}

			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FLEX_CLASS) {
				{
				setState(106);
				match(FLEX_CLASS);
				}
			}

			setState(109);
			match(CLOSE);
			setState(110);
			recursiveContent();
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 67282944L) != 0)) {
				{
				{
				setState(111);
				recursiveContent();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SCRIPT) {
				{
				setState(117);
				match(SCRIPT);
				}
			}

			setState(120);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SectionWrapperContext extends ParserRuleContext {
		public TerminalNode CLOSE() { return getToken(htmlParser.CLOSE, 0); }
		public List<RecursiveContentContext> recursiveContent() {
			return getRuleContexts(RecursiveContentContext.class);
		}
		public RecursiveContentContext recursiveContent(int i) {
			return getRuleContext(RecursiveContentContext.class,i);
		}
		public TerminalNode INLINE_STYLE() { return getToken(htmlParser.INLINE_STYLE, 0); }
		public TerminalNode SCRIPT() { return getToken(htmlParser.SCRIPT, 0); }
		public SectionWrapperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionWrapper; }
	}

	public final SectionWrapperContext sectionWrapper() throws RecognitionException {
		SectionWrapperContext _localctx = new SectionWrapperContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sectionWrapper);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(T__12);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INLINE_STYLE) {
				{
				setState(123);
				match(INLINE_STYLE);
				}
			}

			setState(126);
			match(CLOSE);
			setState(127);
			recursiveContent();
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 67282944L) != 0)) {
				{
				{
				setState(128);
				recursiveContent();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SCRIPT) {
				{
				setState(134);
				match(SCRIPT);
				}
			}

			setState(137);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderWrapperContext extends ParserRuleContext {
		public TerminalNode CLOSE() { return getToken(htmlParser.CLOSE, 0); }
		public List<RecursiveContentContext> recursiveContent() {
			return getRuleContexts(RecursiveContentContext.class);
		}
		public RecursiveContentContext recursiveContent(int i) {
			return getRuleContext(RecursiveContentContext.class,i);
		}
		public TerminalNode INLINE_STYLE() { return getToken(htmlParser.INLINE_STYLE, 0); }
		public TerminalNode SCRIPT() { return getToken(htmlParser.SCRIPT, 0); }
		public HeaderWrapperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headerWrapper; }
	}

	public final HeaderWrapperContext headerWrapper() throws RecognitionException {
		HeaderWrapperContext _localctx = new HeaderWrapperContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_headerWrapper);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(T__14);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INLINE_STYLE) {
				{
				setState(140);
				match(INLINE_STYLE);
				}
			}

			setState(143);
			match(CLOSE);
			setState(144);
			recursiveContent();
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 67282944L) != 0)) {
				{
				{
				setState(145);
				recursiveContent();
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SCRIPT) {
				{
				setState(151);
				match(SCRIPT);
				}
			}

			setState(154);
			match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FooterWrapperContext extends ParserRuleContext {
		public TerminalNode CLOSE() { return getToken(htmlParser.CLOSE, 0); }
		public List<RecursiveContentContext> recursiveContent() {
			return getRuleContexts(RecursiveContentContext.class);
		}
		public RecursiveContentContext recursiveContent(int i) {
			return getRuleContext(RecursiveContentContext.class,i);
		}
		public TerminalNode INLINE_STYLE() { return getToken(htmlParser.INLINE_STYLE, 0); }
		public TerminalNode SCRIPT() { return getToken(htmlParser.SCRIPT, 0); }
		public FooterWrapperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_footerWrapper; }
	}

	public final FooterWrapperContext footerWrapper() throws RecognitionException {
		FooterWrapperContext _localctx = new FooterWrapperContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_footerWrapper);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(T__16);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INLINE_STYLE) {
				{
				setState(157);
				match(INLINE_STYLE);
				}
			}

			setState(160);
			match(CLOSE);
			setState(161);
			recursiveContent();
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 67282944L) != 0)) {
				{
				{
				setState(162);
				recursiveContent();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SCRIPT) {
				{
				setState(168);
				match(SCRIPT);
				}
			}

			setState(171);
			match(T__17);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}